# cka-buddy

./: AGENTS.md  Cargo.toml  README.md
.claude/data/sessions/: 11473b9f-d3da-4c3c-a193-9110e7dfbcfb.json  1577d3a9-a064-4674-becd-523c39f524a7.json  (+6 more)
.pi/agent-sessions/: builder.json  chain-builder.json  chain-planner.json  chain-reviewer.json  planner.json  reviewer.json  scout.json
docs/: cka-study-guide.docx  ui-redesign-plan.md  ui-redesign.md
docs/cka-app-content/: README.md  app-loop-spec.md  index.md  learning-map.md  message-style-guide.md
logs/: chat.json  notification.json  permission_request.json  post_tool_use.json  post_tool_use_failure.json  pre_tool_use.json  session_end.json  session_start.json  stop.json  subagent_start.json  subagent_stop.json  user_prompt_submit.json
skills/ratatui-rebels/: README.md  SKILL.md
specs/: curriculum-evaluation-and-phase0-1-plan.md  interactive-learning-ux-rebels-upgrade.md  tui-redesign-rebels-quality.md
src/: lib.rs  main.rs
src/app/: engine.rs  mod.rs  state.rs
src/coach/: deterministic.rs  llm.rs  mod.rs
src/content/: command_info.rs  loader.rs  mod.rs  models.rs
src/progress/: mod.rs  model.rs  readiness.rs  store.rs
src/terminal/: clipboard.rs  guard.rs  mod.rs  pty.rs  shell_mode.rs
src/ui/: big_numbers.rs  button.rs  callback_registry.rs  clickable_list.rs  cluster_view.rs  constants.rs  effects.rs  learning_screen.rs  mod.rs  popup.rs  splash_screen.rs  tamagotchi.rs  traits.rs  ui_action.rs  ui_frame.rs  ui_screen.rs  widgets.rs
src/verify/: checks.rs
(+33 files in other folders)
