[package]
name = "cka_buddy_tui"
version = "0.1.0"
edition = "2024"

[features]
default = []
llm = ["dep:reqwest"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.28"
dirs = "6.0"
portable-pty = "0.8"
ratatui = "0.29"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.12", optional = true, default-features = false, features = ["blocking", "json", "rustls-tls"] }
tachyonfx = "0.25.0"
